2008-06-02

	* Build.PL:

	Made version a build requirement

2008-05-25

	* lib/HTML/FormWidgets.pm:

	Fixed invalid output from anchor and chooser widgets
	Added POD test

2008-05-19

	* lib/HTML/FormWidgets.pm (_render):

	Added support form HTML 4.01.
	Added Cloud subclass

